<resources>

    <string name="app_name">Alarms Master</string>
    <string name="num_alrms">Number of Alarms</string>
    <string name="snooze_mins">Minutes Between Alarms</string>
    <string name="val_num_alrms">0</string>
    <string name="val_snooze_min">1</string>
    <string name="alarmInd">Alarm set at - </string>

    <string name="preference_file_key">AlarmStorage</string>
    <string name="Alarm_Hour">Alarm Hour</string>
    <string name="Alarm_Min">Alarm Min</string>
    <string name="num_Alarm">Number of Alarms</string>
    <string name="num_Mins">Number of Minutes</string>
    <string name="alarm_On">Alarm State</string>
    <string name="alarm_Counter">Alarm Counter</string>

    <string name="Ex_Alarm_State">Alarm State</string>
    <string name="Ex_Snooze_Min">Snooze Minutes</string>
    <string name="Ex_Alarm_Num">Number of Alarms</string>

</resources>
