<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/numAlrmsText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.create.lou.myapplication.MainActivity">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Switch
        android:id="@+id/switchOn"
        android:showText="false"
        android:layout_width="85dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/timePicker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="35dp"
        app:layout_constraintHorizontal_bias="0.502"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="@+id/textSeekBarAlrms" />

    <SeekBar
        android:id="@+id/seekBarMins"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginBottom="186dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:max="14"
        android:progress="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/seekBarAlrms"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <SeekBar
        android:id="@+id/seekBarAlrms"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="177dp"
        android:layout_height="28dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:max="9"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/seekBarMins"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1" />

    <TextView
        android:id="@+id/textSeekBarAlrms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_alrms"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/seekBarAlrms"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarAlrms"
        app:layout_constraintHorizontal_bias="0.506"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textSeekBarMins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snooze_mins"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="@+id/textSeekBarAlrms"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarMins"
        android:layout_marginBottom="2dp"
        app:layout_constraintRight_toLeftOf="@+id/seekBarMins"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.333"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textValNumAlrms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val_num_alrms"
        app:layout_constraintBottom_toTopOf="@+id/seekBarAlrms"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/seekBarAlrms"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/seekBarAlrms" />

    <TextView
        android:id="@+id/textValSnoozeMins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val_snooze_min"
        app:layout_constraintBottom_toTopOf="@+id/seekBarMins"
        app:layout_constraintRight_toRightOf="@+id/textValNumAlrms" />

    <TextView
        android:id="@+id/textAlarmInd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarmInd"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textSeekBarMins"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textSeekBarMins"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textAlarmDiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="TextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textAlarmInd"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/textAlarmInd"
        android:layout_marginTop="0dp" />

</android.support.constraint.ConstraintLayout>
